# AOC2025

./: .gitignore  Cargo.toml
prolog/: day1.pl
rust/: Cargo.toml
rust/src/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
src/: day1.rs
