[package]
name = "A2025"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
rustc-hash = "2.1.1"
clap = { version = "4.5.53", features = ["derive"] }
cached = "0.56.0"
itertools = "0.14.0"
good_lp = { version = "1.14.2", features = [
    "highs",
    "microlp",
], default-features = false }

# [profile.release]
# debug = "line-tables-only"
